force-app/main/default/objects/BMCServiceDesk__SRM_FulfillmentInputs__c/BMCServiceDesk__SRM_FulfillmentInputs__c.object-meta.xml
<CustomObject>
    <description>Stores the input questions that a user must provide to submit the service request. It also stores the properties of the input questions.</description>
    <label>Fulfillment Input</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Fulfillment Input #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fulfillment Inputs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>