force-app/main/default/objects/BMCServiceDesk__SRM_FulfillmentInputs__c/fields/BMCServiceDesk__AdditionalInfo__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__AdditionalInfo__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Additional Info</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>