force-app/main/default/objects/BMCServiceDesk__SRM_FulfillmentInputs__c/fields/BMCServiceDesk__Condition__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Condition__c</fullName>
    <label>Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>