force-app/main/default/objects/BMCServiceDesk__SRM_FulfillmentInputs__c/fields/BMCServiceDesk__ControlProcess__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ControlProcess__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this check box if you want to create conditions that use the value of this field to invoke a template.</inlineHelpText>
    <label>Control Process</label>
    <type>Checkbox</type>
</CustomField>