force-app/main/default/objects/BMCServiceDesk__SRM_FulfillmentInputs__c/fields/BMCServiceDesk__DefaultValue__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__DefaultValue__c</fullName>
    <description>This field is used to hold the default value in plain text format or reference to a User field.</description>
    <inlineHelpText>This field is used to hold the default value in plain text format or reference to a User field.</inlineHelpText>
    <label>Default Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>