force-app/main/default/objects/BMCServiceDesk__SRM_FulfillmentInputs__c/fields/BMCServiceDesk__DisplayinFullSpan__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__DisplayinFullSpan__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this check box if you want to display this field in full span.</inlineHelpText>
    <label>Display in Full Span</label>
    <type>Checkbox</type>
</CustomField>