force-app/main/default/objects/BMCServiceDesk__SRM_FulfillmentInputs__c/fields/BMCServiceDesk__DisplayInSecondColumn__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__DisplayInSecondColumn__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this check box if you want to display this field in the second column.</inlineHelpText>
    <label>Display in Second Column</label>
    <type>Checkbox</type>
</CustomField>