force-app/main/default/objects/BMCServiceDesk__SRM_FulfillmentInputs__c/fields/BMCServiceDesk__FKRequestDefinition__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKRequestDefinition__c</fullName>
    <label>Request Definition</label>
    <referenceTo>BMCServiceDesk__SRM_RequestDefinition__c</referenceTo>
    <relationshipName>Fulfillment_Inputs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>