force-app/main/default/objects/BMCServiceDesk__SRM_FulfillmentInputs__c/fields/BMCServiceDesk__Hidden__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Hidden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hidden</label>
    <type>Checkbox</type>
</CustomField>