force-app/main/default/objects/BMCServiceDesk__SRM_FulfillmentInputs__c/fields/BMCServiceDesk__InputValues__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__InputValues__c</fullName>
    <label>Input Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>