force-app/main/default/objects/BMCServiceDesk__SRM_FulfillmentInputs__c/fields/BMCServiceDesk__Prompt__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Prompt__c</fullName>
    <label>Input/Prompt</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>