force-app/main/default/objects/BMCServiceDesk__SRM_FulfillmentInputs__c/fields/BMCServiceDesk__Record_ID__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Record_ID__c</fullName>
    <description>This field is used to hold Record ID in text form. This field will be used to rectify record IDs in Condition and Condition Postfix fields on trial org spawned from Trial Master Org.</description>
    <inlineHelpText>This field is used to hold Record ID in text form. This field will be used to rectify record IDs in Condition and Condition Postfix fields on trial org spawned from Trial Master Org.</inlineHelpText>
    <label>Record ID~</label>
    <length>20</length>
    <type>Text</type>
</CustomField>