force-app/main/default/objects/BMCServiceDesk__SRM_FulfillmentInputs__c/fields/BMCServiceDesk__Scrollable__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Scrollable__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Displays fields in a fixed area with a scroll bar.</inlineHelpText>
    <label>Scrollable</label>
    <type>Checkbox</type>
</CustomField>