force-app/main/default/objects/BMCServiceDesk__SRM_FulfillmentInputs__c/fields/BMCServiceDesk__Tooltip__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Tooltip__c</fullName>
    <inlineHelpText>Use this field to show a tooltip for the input field.</inlineHelpText>
    <label>Tooltip</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>