force-app/main/default/objects/BMCServiceDesk__SRM_FulfillmentInputs__c/fields/BMCServiceDesk__URLInfo__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__URLInfo__c</fullName>
    <inlineHelpText>Use this field to enter a URL that provides more information.</inlineHelpText>
    <label>URL</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>