force-app/main/default/objects/BMCServiceDesk__SRM_FulfillmentInputs__c/fields/BMCServiceDesk__Validate__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Validate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select this check box if you want to create validation rules for the value of this field.</description>
    <inlineHelpText>Select this check box if you want to create validation rules for the value of this field.</inlineHelpText>
    <label>Validate</label>
    <type>Checkbox</type>
</CustomField>