force-app/main/default/objects/BMCServiceDesk__SRM_FulfillmentInputs__c/fields/BMCServiceDesk__VisibleLines__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__VisibleLines__c</fullName>
    <inlineHelpText>Use this field to set the height of the input RTF textbox</inlineHelpText>
    <label>Visible Lines</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>